pamc/src/tests/integration/should_fail/parse/mod.rs
use super::*;

mod check;
mod empty_params;
mod illegal_underscore;
